# GeoViS

./: .gitignore  CMakeLists.txt  GeoViSM4D.pri  GeoViSM4D.pro  GeoViSM4D_hestia.pro  GeoViSM4Dpar.pro  GeoViSM4Dpar_hestia.pro  GvsGlobalDefs.h  README.css  README.md  dllmain.cpp  doxyfile  geovis.cpp  geovispar.cpp  gvsrun.sh  makeDist.sh
Cam/: Gvs2PICam.cpp  Gvs2PICam.h  Gvs4PICam.cpp  Gvs4PICam.h  GvsCamera.cpp  GvsCamera.h  GvsPanoramaCam.cpp  GvsPanoramaCam.h  GvsPinHoleCam.cpp  GvsPinHoleCam.h  GvsPinHoleStereoCam.cpp  GvsPinHoleStereoCam.h
Dev/: GvsDevice.cpp  GvsDevice.h  GvsProjector.cpp  GvsProjector.h  GvsSampleMgr.cpp  GvsSampleMgr.h
Img/: GvsChannelImg2D.cpp  GvsChannelImg2D.h  GvsColor.cpp  GvsColor.h  GvsIntersecOutput.cpp  GvsIntersecOutput.h  GvsPicIOEnvelope.cpp  GvsPicIOEnvelope.h  GvsPictureIO.cpp  GvsPictureIO.h  GvsPngIO.cpp  GvsPngIO.h  GvsPpmIO.cpp  GvsPpmIO.h  GvsTiffIO.cpp  GvsTiffIO.h
Light/: GvsFlashLight.cpp  GvsFlashLight.h  GvsLightSrc.cpp  GvsLightSrc.h  GvsLightSrcMgr.cpp  GvsLightSrcMgr.h  GvsPointLight.cpp  GvsPointLight.h
MpiUtils/: GvsMpiDefs.h  MpiImage.cpp  MpiImage.h  MpiTaskManager.cpp  MpiTaskManager.h
Parser/: GvsParseScheme.cpp  GvsParseScheme.h  GvsParser.cpp  GvsParser.h  dynload.c  dynload.h  init.scm  parse_camera.cpp  parse_camera.h  parse_compObj.cpp  parse_compObj.h  parse_csgObj.cpp  parse_csgObj.h  parse_device.cpp  parse_device.h  parse_helper.cpp  parse_helper.h  parse_light.cpp  parse_light.h  parse_locTed.cpp  parse_locTed.h  parse_meshObjects.cpp  parse_meshObjects.h  parse_metric.cpp  parse_metric.h  parse_motion.cpp  parse_motion.h  parse_planeObjects.cpp  parse_planeObjects.h  parse_projector.cpp  parse_projector.h  parse_raygen.cpp  parse_raygen.h  parse_shader.cpp  parse_shader.h  parse_solidObjects.cpp  parse_solidObjects.h  parse_solver.cpp  parse_solver.h  parse_texture.cpp  (+7 more)
Ray/: GvsRay.cpp  GvsRay.h  GvsRayAllIS.cpp  GvsRayAllIS.h  GvsRayAnyIS.cpp  GvsRayAnyIS.h  GvsRayClosestIS.cpp  GvsRayClosestIS.h  GvsRayGen.cpp  GvsRayGen.h  GvsRayOneIS.cpp  GvsRayOneIS.h  GvsRayVisual.cpp  GvsRayVisual.h  GvsSurfIntersec.cpp  GvsSurfIntersec.h
Shader/: GvsShader.cpp  GvsShader.h
Shader/Surface/: GvsSurfaceShader.cpp  GvsSurfaceShader.h
Texture/: GvsCheckerT2D.cpp  GvsCheckerT2D.h  GvsChequeredT2D.cpp  GvsChequeredT2D.h  GvsChequeredTimeT2D.cpp  GvsChequeredTimeT2D.h  GvsColorGradTex.cpp  GvsColorGradTex.h  GvsDieT2D.cpp  GvsDieT2D.h  GvsImg2DSampler.cpp  GvsImg2DSampler.h  GvsTexture.cpp  GvsTexture.h  GvsTexture2D.cpp  GvsTexture2D.h  GvsUniTex.cpp  GvsUniTex.h
Utils/: GvsGeodSolver.cpp  GvsGeodSolver.h  GvsGramSchmidt.cpp  GvsGramSchmidt.h  GvsLog.cpp  GvsLog.h
Viewer/: CMakeLists.txt  GLShader.cpp  GLShader.h  Utils.cpp  Utils.h  main.cpp
Viewer/Shader/: kerrAccretionDisk.frag  kerrNeutronStar.frag  schwNeutronStar.frag  schwarzschildDisc.frag  standard.frag  standard.vert  texCoords.frag
examples/: alcubierre.scm  appViewMovBall.scm  appViewMovRod.scm  barriolavilenkin.scm  cartSchwarzschild.scm  collapse.scm  einsteinrosenwave.scm  ernst.scm  fallEddFinkIn.scm  fallIntoBH.scm  gridForApp.scm  isotropSchwarzschild.scm  jnw.scm  kastorTraschen.scm  kerrAccretionDisk.scm  lattice.scm  minkBall.scm  minkFrameObj.scm  minkRotSphere.scm  minkWheel.scm  minkowski.scm  morristhorne.scm  movClock.scm  mtContactRings.scm  nbinary.scm  neutronstar.scm  rotdihole.scm  schwPeriodicOrbit.scm  schwarzschild.scm  sphereAroundBlackhole.scm  sphereInSchwarzschild.scm  starAroundBlackhole.scm  taubnut.scm  teoSimpleWH.scm  testCSG.scm  whBox.scm  whLattice.scm
